--- a/crowdin.yml
+++ b/crowdin.yml
@@ -10,9 +10,6 @@ files:
     {
       "source": "/html/i18n/en.json",
       "translation": "/html/i18n/%two_letters_code%.json",
-      "languages_mapping": {
-        "osx_code": {
-          "pt-BR": "pt"
-        },
-      },
+      "languages_mapping": { "osx_code": { "pt-BR": "pt" } },
+    },
   ]
