--- a/.github/workflows/crowdin-download.yml
+++ b/.github/workflows/crowdin-download.yml
@@ -10,7 +10,7 @@ permissions:
   pull-requests: write
 
 jobs:
-  crowdin:
+  crowdin-download:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
