--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -29,4 +29,4 @@ jobs:
         run: pnpm install
 
       - name: Run Prettier check
-        run: pnpm exec prettier --write .
+        run: pnpm exec prettier --check .
