--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Use Node.js v20.16.0
         uses: actions/setup-node@v4
         with:
-          node-version: [20.16.0]
+          node-version: "20.16.0"
           cache: "pnpm"
 
       - name: Install dependencies
