Use full language name (en_US, etc.) instead of short (en, etc.)

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -9,6 +9,6 @@ files:
   [
     {
       "source": "/html/i18n/en.json",
-      "translation": "/html/i18n/%two_letters_code%.json",
+      "translation": "/html/i18n/%locale_with_underscore%.json",
     },
   ]
