--- a/.github/workflows/fetch-sites.yml
+++ b/.github/workflows/fetch-sites.yml
@@ -2,12 +2,15 @@ name: Fetch JSON from API
 
 on:
   schedule:
-    - cron: "0 * * * *" # Runs every 24 hours (adjust UTC if needed)
+    - cron: "0 * * * *" # Runs every 24 hours
   workflow_dispatch: # Allows manual triggering
 
 jobs:
   update-json:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
 
     steps:
       - name: Checkout repository
@@ -15,6 +18,7 @@ jobs:
 
       - name: Fetch JSON
         run: |
+          mkdir -p data
           curl -sS https://smc-api.lodine.xyz/sites -o data/sites.json || echo "API is down, using last known copy"
 
       - name: Check for changes
@@ -22,11 +26,17 @@ jobs:
         run: |
           git diff --quiet || echo "CHANGED=true" >> $GITHUB_ENV
 
-      - name: Commit and push if changed
-        if: env.CHANGED == 'true'
+      - name: Set up Git
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add data/sites.json
-          git commit -m "Update sites.json (Automated)"
-          git push
+
+      - name: Create Pull Request
+        if: env.CHANGED == 'true'
+        uses: peter-evans/create-pull-request@v6
+        with:
+          branch: update-sites-json
+          delete-branch: true
+          title: "Update sites.json (Automated)"
+          body: "This PR updates the offline JSON copy from the API."
+          commit-message: "Update sites.json (Automated)"
