--- a/.github/workflows/fetch-sites.yml
+++ b/.github/workflows/fetch-sites.yml
@@ -2,7 +2,7 @@ name: Fetch JSON from API
 
 on:
   schedule:
-    - cron: "0 * * * *" # Runs every 24 hours
+    - cron: "0 0 * * *" # Runs every 24 hours
   workflow_dispatch: # Allows manual triggering
 
 jobs:
