--- a/.github/workflows/fetch-sites.yml
+++ b/.github/workflows/fetch-sites.yml
@@ -1,8 +1,8 @@
 name: Fetch JSON from API
 
 on:
-  schedule:
-    - cron: "0 0 * * *" # Runs every 24 hours
+  # schedule:
+  #   - cron: "0 0 * * *" # Runs every 24 hours
   workflow_dispatch: # Allows manual triggering
 
 jobs:
